--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Releasing process
 on:
   release:
     type: [published]
-
+    
 permissions:
   contents: read
   pages: write
@@ -28,6 +28,7 @@ jobs:
           # list of Docker images to use as base name for tags
           images: |
             paulbrissaud/suivi-bourse-app
+            ghcr.io/pbrissaud/suivi-bourse-app
           # generate Docker tags based on the following events/attributes
           tags: |
             type=semver,pattern={{version}},value=${{github.event.release.name}}
@@ -46,6 +47,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v4
