--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -40,6 +40,7 @@ jobs:
       - uses: actions/setup-python@v5.0.0
         with:
           python-version: "3.x"
+          cache: "pip"
 
       - uses: BSFishy/pip-action@v1
         with:
