--- a/.github/workflows/lint-test-pr.yml
+++ b/.github/workflows/lint-test-pr.yml
@@ -1,16 +1,9 @@
-name: "Pull request process"
-
+name: "Pull request lint and test"
 on:
   pull_request:
     branches: [master]
 
 jobs:
-  dco-check:
-    name: DCO Check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: tisonkun/actions-dco@v1.1
-
   python-linter:
     name: Lint
     runs-on: ubuntu-latest
