chore: Update docker-compose.yaml to use latest suivi-bourse-app image
- Updated the `docker-compose.yaml` to pull the latest `suivi-bourse-app` image by setting the image tag to `latest`.
- Added `pull_policy: "always"` to ensure the latest image is fetched every time the service starts.
- Changed the default image registry to GitHub Container Registry for better consistency with our CI/CD pipeline.

Signed-off-by: Paul Brissaud <pbrissaud.pro@gmail.com>

--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -5,7 +5,8 @@ services:
     - prometheus
     environment:
     - SB_SCRAPING_INTERVAL=${SCRAPING_INTERVAL}
-    image: paulbrissaud/suivi-bourse-app:3.7.2
+    image: ghcr.io/pbrissaud/suivi-bourse-app:latest
+    pull_policy: always
     restart: unless-stopped
     volumes:
     - ./config.yaml:/home/appuser/.config/SuiviBourse/config.yaml:ro
