chore(ci): Update create-release.yml to use simple release type
The `create-release.yml` workflow file has been updated to use the `simple` release type for the `release-please` action.

Signed-off-by: Paul Brissaud <pbrissaud.pro@gmail.com>

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -17,3 +17,5 @@ jobs:
     steps:
       - uses: googleapis/release-please-action@v4
         id: release-please
+        with:
+          release-type: simple
