chore: Change renovate commit type to be visible in the changelog
Signed-off-by: Paul Brissaud <pbrissaud.pro@gmail.com>

--- a/renovate.json
+++ b/renovate.json
@@ -9,5 +9,8 @@
       "automerge": true
     }
   ],
-  "assignees": ["pbrissaud"]
+  "assignees": ["pbrissaud"],
+  "semanticCommits": "enabled",
+  "semanticCommitType": "deps",
+  "semanticCommitScope": "{{parentDir}}"
 }
