--- a/.github/workflows/releasing.yml
+++ b/.github/workflows/releasing.yml
@@ -1,10 +1,12 @@
 name: Releasing process
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - main
     
 permissions:
-  contents: read
+  contents: write
+  pull-requests: write
   pages: write
   id-token: write
   packages: write 
@@ -15,8 +17,24 @@ concurrency:
   cancel-in-progress: true
   
 jobs:
+  create-release:
+    runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: "${{ secrets.TOKEN }}"
+      GITHUB_BRANCH: "master"
+    steps:
+      - uses: googleapis/release-please-action@v4
+        id: release-please
+        with:
+          release-type: simple
+    outputs:
+      release_created: ${{ steps.release-please.outputs.release_created }}
+      tag_name: ${{ steps.release-please.outputs.tag_name }}
+
   docker:
     runs-on: ubuntu-latest
+    needs: create-release
+    if: ${{needs.create-release.outputs.release_created}} 
     steps:
       - uses: actions/checkout@v4
         with:
@@ -32,9 +50,9 @@ jobs:
             ghcr.io/pbrissaud/suivi-bourse-app
           # generate Docker tags based on the following events/attributes
           tags: |
-            type=semver,pattern={{version}},value=${{github.event.release.name}}
-            type=semver,pattern={{major}}.{{minor}},value=${{github.event.release.name}}
-            type=semver,pattern={{major}},value=${{github.event.release.name}}
+            type=semver,pattern={{version}},value=${{needs.create-release.outputs.tag_name}}
+            type=semver,pattern={{major}}.{{minor}},value=${{needs.create-release.outputs.tag_name}}
+            type=semver,pattern={{major}},value=${{needs.create-release.outputs.tag_name}}
             type=sha,prefix=
 
       - name: Set up QEMU
@@ -67,6 +85,8 @@ jobs:
 
   doc:
     runs-on: ubuntu-latest
+    needs: create-release
+    if: ${{needs.create-release.outputs.release_created}} 
     steps:
       - uses: actions/checkout@v4
         with:
@@ -80,7 +100,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
           path: 'website/build'
       - name: Deploy to GitHub Pages
         id: deployment
