chore(renovate): set renovate prs as deps and not chore
Signed-off-by: Paul Brissaud <pbrissaud.pro@gmail.com>

--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,7 @@
   "extends": [
     "config:base"
   ],
+  "ignorePresets": [":semanticPrefixFixDepsChoreOthers"],
   "packageRules": [
     {
       "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
