--- a/.github/workflows/pr-compliance.yml
+++ b/.github/workflows/pr-compliance.yml
@@ -22,4 +22,4 @@ jobs:
       - name: PR Conventional Commit Validation
         uses: ytanikin/PRConventionalCommits@1.2.0
         with:
-          task_types: '["feat","fix", "feat!", "fix!", "refactor!", "deps", "chore"]'
+          task_types: '["feat","fix", "feat!", "fix!", "refactor!", "deps", "chore", "docs"]'
