--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "changelog-sections": [
     {
       "type": "feat",
@@ -22,6 +23,7 @@
     },
     {
       "type": "chore",
+      "section": "Miscellaneous",
       "hidden": true
     }
   ]
